// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <ActListing /> renders correctly 1`] = `
<article
  class="ActListing"
>
  <a
    class="ActListing-link"
    href="url"
    rel="noopener"
    target="_blank"
  >
    <div
      class="ActListing-details"
    >
      <h3>
        name
      </h3>
      <section
        class="ActListing-meta"
      >
        <div
          class="Meta ActListing-genre"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ActListing-location"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Location
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            location name
          </span>
        </div>
      </section>
    </div>
    <figure
      class="ActListing-image"
    >
      <img
        alt="name"
        src="imageUrl"
      />
    </figure>
  </a>
</article>
`;

exports[`[presentation] <ActListing /> updates \`isRendered\` state after image has loaded 1`] = `
<article
  class="ActListing isRendered"
>
  <a
    class="ActListing-link"
    href="url"
    rel="noopener"
    target="_blank"
  >
    <div
      class="ActListing-details"
    >
      <h3>
        name
      </h3>
      <section
        class="ActListing-meta"
      >
        <div
          class="Meta ActListing-genre"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ActListing-location"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Location
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            location name
          </span>
        </div>
      </section>
    </div>
    <figure
      class="ActListing-image"
    >
      <img
        alt="name"
        src="imageUrl"
      />
    </figure>
  </a>
</article>
`;

exports[`[presentation] <ActListing /> updates \`isRendered\` state and triggers onLoad prop when image has previously been loaded 1`] = `
<article
  class="ActListing isRendered"
>
  <a
    class="ActListing-link"
    href="url"
    rel="noopener"
    target="_blank"
  >
    <div
      class="ActListing-details"
    >
      <h3>
        name
      </h3>
      <section
        class="ActListing-meta"
      >
        <div
          class="Meta ActListing-genre"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ActListing-location"
        >
          <svg
            attr="[object Object]"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Location
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            location name
          </span>
        </div>
      </section>
    </div>
    <figure
      class="ActListing-image"
    >
      <img
        alt="name"
        src="imageUrl"
      />
    </figure>
  </a>
</article>
`;
